--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,18 +11,17 @@ source:
 
 build:
   number: 0
-  noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
-    - python >=3.6
+    - python >=3.7
     - pip
-    - setuptools
+    - hatchling
   run:
-    - python >=3.6
-    - attrs
-    - flake8 >=3.2.1
+    - python >=3.7
+    - flake8 >=3.2.1,<7
+    - ast-decompiler >= 0.7.0,<1.0 # [py<39]
     - pyflakes >=2.1.1
 
 test:
