--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,13 +15,14 @@ build:
 
 requirements:
   host:
-    - python >=3.7
+    # - python >=3.7
+    - python
     - pip
     - hatchling
   run:
-    - python >=3.7
+    - python
     - flake8 >=3.2.1,<7
-    - ast-decompiler >= 0.7.0,<1.0 # [py<39]
+    - ast-decompiler >= 0.7.0,<1.0  # [py<39]
     - pyflakes >=2.1.1
 
 test:
